--- a/package.json
+++ b/package.json
@@ -2,6 +2,37 @@
   "name": "beeetrack-javascript-test",
   "version": "1.0.0",
   "devDependencies": {
-    "json-server": "^0.11.2"
+    "json-server": "^0.11.2",
+    "prop-types": "^15.7.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-icons": "^1.0.0-alpha",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-dynamic-modal": "^1.1.1",
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
